--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "14.2.4",
     "preline": "^2.3.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-masonry-css": "^1.0.16"
   },
   "devDependencies": {
     "@types/node": "^20",
