--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "preline": "^2.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-loading-skeleton": "^3.4.0",
     "react-masonry-css": "^1.0.16"
   },
   "devDependencies": {
