--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.1.4",
     "next": "14.2.4",
     "preline": "^2.3.0",
+    "pure-react-carousel": "^1.30.1",
     "react": "^18",
     "react-dom": "^18",
     "react-loading-skeleton": "^3.4.0",
