--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18",
     "react-loading-skeleton": "^3.4.0",
     "react-masonry-css": "^1.0.16",
+    "react-player": "^2.16.0",
     "swiper": "^11.1.4"
   },
   "devDependencies": {
